--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -14,7 +14,8 @@
         <a routerLink="/about">About</a>|
         <a routerLink="/user">User</a>|
         <a routerLink="/signin">signin</a>|
-        <a routerLink="/dashboard">dashboard</a>
+        <a routerLink="/dashboard">dashboard</a>|
+        <a routerLink="/dash">dashboard</a>
     </div>
 </div>
  <!-- <a href=""></a> -->
