--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -22,6 +22,19 @@
       </button>
       <span>class2</span>
     </mat-toolbar>
-    Add Content Here
+    Add Content Here 
+    <div>
+        <div class="row">
+            <div class="col-12 col-md-6 shadow">
+                <app-sibling1></app-sibling1>
+            </div>
+            <div class="col-12 col-md-6 shadow">
+                <app-sibling2></app-sibling2>
+            </div>
+        </div>
+    </div>
   </mat-sidenav-content>
+
 </mat-sidenav-container>
+  <!-- <div class="row">
+</div> -->
